# princeton_ansible

./: .ansible-lint  .devbox_init.sh  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lastpass-ansible.conf  .mise.local.toml  .mise.toml  .tool-versions  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  README_Windows.md  Vagrantfile  activate_venv.fish  ansible-vault-merge  ansible.cfg  ansible_vault-merge.sh  apache.yml  archivesspace.yml  awx.yml  bibdata.yml  bibdata_staging.yml  devbox.json  dpul.yml  dpul_production.yml  dpul_staging.yml  drupal.yml  dss.yml  external_roles.yml  ezproxy.yml  figgy.yml  fix-nix-build-users.sh  galaxy.yml  geoserver.yml  graylog.yml  hosts  (+36 more)
.circleci/: config.yml
.githooks/: pre-commit
.zed/: settings.json
Vagrant/: apacheVagrantfile  atomVagrantfile  awxVagrantfile  bibdataStagingVagrantfile  bibdataVagrantfile  cantaloupeProductionVagrantFile  cicognaraStagingVagrantfile  collectionspaceVagrantfile  dpulStagingVagrantfile  dpulVagrantfile  drupalVagrantfile  dssVagrantfile  ezproxyTestVagrantfile  ezproxyVagrantfile  figgyProductionWorkerVagrantfile  figgyStagingVagrantfile  graylogVagrantfile  laeStagingVagrantfile  laeVagrantfile  libwebVagrantfile  libwwwVagrantfile  mariadbVagrantfile  matomoVagrantfile  nginxVagrantfile  ojsVagrantfile  orangelightStagingVagrantfile  orangelightVagrantfile  plantainStagingVagrantfile  postgresVagrantfile  pulfa3StagingVagrantfile  pulmapStagingVagrantfile  pulmapVagrantfile  railsVagrantfile  redisVagrantfile  solrcloudVagrantfile  trainingVagrantfile
(+6362 files in other folders)
