[tool.poetry]
name = "princeton-ansible"
version = "0.1.0"
description = "Ansible at Princeton"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "princeton_ansible"}]

[tool.poetry.dependencies]
python = "^3.11"
molecule = "^5.1.0"
ansible = "^5.4.0"
molecule-plugins = {extras = ["docker"], version = "^23.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
